--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,22 +1,22 @@
-<ion-tabs class="tabs-icon-top tabs-color-active-positive bottom-tab">
+ <ion-tabs class="tabs-icon-top tabs-color-active-positive bottom-tab">
     <!-- Discover Tab -->
-    <ion-tab title="Discover" icon-off="all-icon-bottom-menu_discover" icon-on="all-icon-bottom-menu_discover" href="#/tab/discover">
+    <ion-tab title="Discover" icon-off="all-icon-bottom-menu_discover" icon-on="all-icon-bottom-menu_discover" href="" ng-click="redirect('discover')">
         <ion-nav-view name="tab-discover@tab"></ion-nav-view>
     </ion-tab>
     <!-- My Learning Tab -->
-    <ion-tab title="My Learning" icon-off="all-icon-bottom-menu_my-learning" icon-on="all-icon-bottom-menu_my-learning" href="#/tab/mylearning">
+    <ion-tab title="My Learning" icon-off="all-icon-bottom-menu_my-learning" icon-on="all-icon-bottom-menu_my-learning" href="" ng-click="redirect('mylearning')">
         <ion-nav-view name="tab-mylearning@tab"></ion-nav-view>
     </ion-tab>
     <!-- Tech tips Tab -->
-    <ion-tab title="Tech Tips" icon-off="all-icon-bottom-menu_techtips" icon-on="all-icon-bottom-menu_techtips" href="#/tab/techtips">
+    <ion-tab title="Tech Tips" icon-off="all-icon-bottom-menu_techtips" icon-on="all-icon-bottom-menu_techtips" href="" ng-click="redirect('techtips')">
         <ion-nav-view name="tab-techtips@tab"></ion-nav-view>
     </ion-tab>
     <!-- App Library Tab -->
-    <ion-tab title="Apps" icon-off="all-icon-bottom-menu_apps" icon-on="all-icon-bottom-menu_apps" href="#/tab/applibrary">
+    <ion-tab title="Apps" icon-off="all-icon-bottom-menu_apps" icon-on="all-icon-bottom-menu_apps" href="" ng-click="redirect('applibrary')">
         <ion-nav-view name="tab-applibrary@tab"></ion-nav-view>
     </ion-tab>
     <!-- Resources Tab -->
-    <ion-tab title="Resources" icon-off="all-icon-bottom-menu_resources" icon-on="all-icon-bottom-menu_resources" href="#/tab/resource">
+    <ion-tab title="Resources" icon-off="all-icon-bottom-menu_resources" icon-on="all-icon-bottom-menu_resources" href="" ng-click="redirect('resource')">
         <ion-nav-view name="tab-resource@tab"></ion-nav-view>
     </ion-tab>
 </ion-tabs>
