--- a/www/templates/applibrary/applibrary.html
+++ b/www/templates/applibrary/applibrary.html
@@ -1,6 +1,7 @@
 <ion-view view-title="{{cortexLogo}}" class="app-library">
   <ion-nav-buttons side="secondary">
-    <img ng-click="redirectDisover()" src="img/svg/icon_search_grey.svg" class="icon-my-learning-search" />
+    <!-- <img ng-click="redirectDisover()" src="img/svg/icon_search_grey.svg" class="icon-my-learning-search" /> -->
+    <i ng-click="redirectDisover()" class="all-icon-icon_search_white header-search-icon"></i>
   </ion-nav-buttons>
   <ion-content class="padding">
     <h5 class="text">APP LIBRARY</h5>
