--- a/www/templates/discover/events.html
+++ b/www/templates/discover/events.html
@@ -1,22 +1,24 @@
 <ion-view view-title="{{cortexLogo}}" class="my-events">
     <ion-header-bar class="bar-subheader">
-        <div class="tabs tabs-secondary subheader-tabs" ng-init="discoverEvents()">
-            <a class="tab-item my-events-myevents" ng-click="discoverEvents()" ui-sref="tab.discoversmyevents">
+        <div class="tabs tabs-secondary subheader-tabs" ng-init="discoverEvents(); activeTab = 0">
+            <a class="tab-item my-events-myevents" ng-click="discoverEvents(); activeTab = 0" ui-sref="tab.discoversmyevents" ng-class="{active: activeTab == 0}">
                 <!-- <img src="img/svg/tab_events_my-events.svg" width="25%" /> -->
                 <div><i class="all-icon-tab_events_my-events"></i></div>
                 <div class="tab-title">My Events</div>
             </a>
-            <a class="tab-item my-events-livelearning" ng-click="liveLearningEvents()">
+            <div class="border"></div>
+            <a class="tab-item my-events-livelearning" ng-click="liveLearningEvents(); activeTab = 1" ng-class="{active: activeTab == 1}">
                 <!-- <img src="img/svg/tab_events_livelearning.svg" width="27%" /> -->
                 <div><i class="all-icon-tab_events_livelearning"></i></div>
                 <div class="tab-title">Live Learning</div>
             </a>
+            <div class="border"></div>
             <!-- <a class="tab-item my-events-mychapter" ng-click="myChapter()"> -->
             <!-- <img src="img/svg/tab_my-learning_all-courses.svg" width="25%" /> -->
             <!-- <div><i class="all-icon-tab_my-learning_all-courses"></i></div>
                 <div class="tab-title">My Chapter</div>
             </a> -->
-            <a class="tab-item my-events-nationwide" ng-click="nationwideEvents()">
+            <a class="tab-item my-events-nationwide" ng-click="nationwideEvents(); activeTab = 2" ng-class="{active: activeTab == 2}">
                 <!-- <img src="img/svg/tab_events_nationwide.svg" width="25%" /> -->
                 <div><i class="all-icon-tab_events_nationwide"></i></div>
                 <div class="tab-title">Nationwide</div>
@@ -121,7 +123,7 @@
                 <div class="col-70">
                     <div class="text-box">
                         <div class="row-top"><a href="">{{event.title}}</a></div>
-                        <div class="row-bottom"><b>Location: </b>{{event.address1}} {{event.address2}} {{event.address3}} {{event.city}} {{event.stateProvince}} {{event.postal}}
+                        <div class="row-bottom" ng-hide="!event.address1 && !event.address2 && !event.address3 && !event.city && !event.stateProvince && !event.postal"><b>Location: </b>{{event.address1}} {{event.address2}} {{event.address3}} {{event.city}} {{event.stateProvince}} {{event.postal}}
                             <br>
                             <b>When: </b>{{event.formattedBeginDate | date: 'shortTime'}}
                         </div>
@@ -129,18 +131,18 @@
                 </div>
             </div>
             <div class="event-description">
-                <p ng-bind-html="event.webDescription | limitHtml: 10"></p>
+                <p>{{event.description}}</p>
                 <div class="description-button" ng-show="event.webDescription">
                     <a ng-click="eventDetail(event.eventId,eventTabName)">Read more</a>
                 </div>
                 <div ng-show="event.meetingUrl">
-                    <a href="{{event.meetingUrl}}"><img src="img/svg/icon_web-link.svg" /> <b>{{event.meetingUrl}}</b></a>
+                    <a ng-click="openPage(event.meetingUrl)"><img src="img/svg/icon_web-link.svg" /> <b>{{event.meetingUrl}}</b></a>
                 </div>
                 <br>
                 <!-- <div ng-show="event.webDescription">
                     <br>
                 </div> -->
-                <button class="myevents-calendar" ng-click="addEvent(event.title,event.city,event.description,event.formattedBeginDate, event.formattedEndDate)"><b>Add to Calendar</b></button>
+                <button class="myevents-calendar" ng-click="addEvent(event.title,event.city,event.title,event.formattedBeginDate, event.formattedEndDate)"><b>Add  Calendar</b></button>
             </div>
         </div>
         <!-- </div> -->
