--- a/www/templates/discover/recentsearches.html
+++ b/www/templates/discover/recentsearches.html
@@ -8,12 +8,14 @@
     <ion-content>
         <div class="item title">PREVIOUS SEARCHES</div>
         <div class="list">
-            <a class="item item-icon-right" ui-sref="tab.searchresults" ng-repeat="i in [0,1,2,3,4,5]">
-                <label class="date">01 May 2016</label><br/>
-    			<label class="query">Arris modem fast reboot</label>
-    			<i class="icon ion-ios-arrow-right arrow-icon"></i><br/>
-    			<label class="count">23 Results</label>
-			</a>
+            <a class="item item-icon-right" ui-sref="tab.searchresults" ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10]">
+                <label class="date">01 May 2016</label>
+                <br/>
+                <label class="query">Arris modem fast reboot</label>
+                <i class="icon ion-ios-arrow-right arrow-icon"></i>
+                <br/>
+                <label class="count">23 Results</label>
+            </a>
         </div>
     </ion-content>
 </ion-modal-view>
