--- a/www/templates/resource/SCTEstd.html
+++ b/www/templates/resource/SCTEstd.html
@@ -14,12 +14,12 @@
                 <ion-list>
                     <!-- <div class="inprogress-course"> -->
                     <div class="list">
-                        <div ng-repeat="item in standards | filter:searchString track by $index" ng-click="openURL(item.url)">
+                        <div ng-repeat="item in standards | filter:searchString track by $index" ng-click="openStdURL(item.url)">
                             <ion-item class="item-stable scte-list1">
                                 <div class="row">
                                     <div>
                                         <div class="row">
-                                            <a ng-click="openURL(standard.url)"> {{item.identifier}}  </a>
+                                            <a ng-click="openStdURL(standard.url)"> {{item.identifier}}  </a>
                                         </div>
                                         <div class="row break">{{item.title}}</div>
                                     </div>
