--- a/www/templates/resource/resource.html
+++ b/www/templates/resource/resource.html
@@ -1,10 +1,11 @@
 <ion-view view-title="{{cortexLogo}}" class="resource">
     <ion-nav-buttons side="secondary">
-        <img ng-click="redirectDisover()" src="img/svg/icon_search_grey.svg" class="icon-my-learning-search" />
+        <!-- <img ng-click="redirectDisover()" src="img/svg/icon_search_grey.svg" class="icon-my-learning-search" /> -->
+        <i ng-click="redirectDisover()" class="all-icon-icon_search_white header-search-icon"></i>
     </ion-nav-buttons>
     <ion-content>
         <ui-view name="mylearning-tab"></ui-view>
-        <div class="topic">RESOURCE</div>
+        <div class="topic">RESOURCES</div>
         <!-- <div class="events">
             <h4 class="heading">YOUR EVENTS</h4>
             <a class="see-all" ng-click="myEventsList()">See All &gt;</a>
@@ -20,15 +21,15 @@
                         <div class="row row-bottom">{{event.eventInfo}}</div>
                     </div>
                 </div> -->
-                <!-- <div class="event-date">
+        <!-- <div class="event-date">
                                 <span class="circle">{{event.date}}</span>
                                 <span class="month">{{event.month}}</span>
                                  <div><a href="">{{event.eventDate}}  </a>
                         </div>
                     </div> -->
-                <!-- <div class="alpha"><a href="">{{event.eventDate}}  </a>
+        <!-- <div class="alpha"><a href="">{{event.eventDate}}  </a>
                     </div> -->
-            <!-- </div>
+        <!-- </div>
         </div> -->
         <div class="dictionary">
             <h4 class="heading">DICTIONARY</h4>
@@ -46,7 +47,7 @@
             <ion-list>
                 <!--  <div class="inprogress-course"> -->
                 <ion-list>
-                    <div ng-repeat="index in [0,1,2]" ng-click="openURL(standards[index].url)">
+                    <div ng-repeat="index in [0,1,2]" ng-click="openStdURL(standards[index].url)">
                         <ion-item class="item-stable scte-list">
                             <div class="row">
                                 <div class="col col-20">
@@ -54,7 +55,7 @@
                                 </div>
                                 <div class="col col-60">
                                     <div class="row">
-                                        <a ng-click="openURL(standards[index].url)"> {{standards[index].identifier}}  </a> </div>
+                                        <a ng-click="openStdURL(standards[index].url)"> {{standards[index].identifier}}  </a> </div>
                                     <div class="row break">{{standards[index].title}}</div>
                                 </div>
                                 <div class="col col-90 arrow"><img src="svg/icon_arrow.svg" /></div>
@@ -67,30 +68,31 @@
                     <p>{{standards[index].title}}</p>
                 </div>-->
             </ion-list>
-        </div>
-
-        <div class="whitepaper">
-            <h4 class="heading">WHITE PAPERS</h4>
-            <a class="see-all" ng-click="whitepaperOpen()">See All &gt;</a>
-            <ion-list>
+            </div>
+            <div class="whitepaper">
+                <h4 class="heading">WHITE PAPERS</h4>
+                <a class="see-all" ng-click="whitepaperOpen()">See All &gt;</a>
                 <ion-list>
-                    <div ng-repeat="index in [0,1,2]" ng-click="openURL(standards[index].url)">
-                        <ion-item class="item-stable scte-list">
-                            <div class="row">
-                                <div class="col col-20">
-                                    <img class="image" ng-src="img/u214.png">
+                    <ion-list>
+                        <div ng-repeat="index in [0,1,2]" ng-click="openURL(whitePapers[index].fileName)">
+                        
+                            <ion-item class="item-stable scte-list">
+                                <div class="row">
+                                    <div class="col col-20">
+                                        <img class="image" ng-src="img/u214.png">
+                                    </div>
+                                    <div class="col col-60">
+                                        <div class="row">
+                                            <a ng-click="openURL(whitePapers[index].fileName)"> {{whitePapers[index].title}}  </a> </div>
+                                        <div class="row break">{{whitePapers[index].title}}</div>
+                                    </div>
+                                    <div class="col col-90 arrow"><img src="svg/icon_arrow.svg" /></div>
                                 </div>
-                                <div class="col col-60">
-                                    <div class="row">
-                                        <a ng-click="openURL(standards[index].url)"> {{standards[index].identifier}}  </a> </div>
-                                    <div class="row break">{{standards[index].title}}</div>
-                                </div>
-                                <div class="col col-90 arrow"><img src="svg/icon_arrow.svg" /></div>
-                            </div>
-                        </ion-item>
-                    </div>
+                            </ion-item>
+                        
+                        </div>
+                    </ion-list>
                 </ion-list>
-            </ion-list>
-        </div>
+            </div>
     </ion-content>
 </ion-view>
