--- a/www/templates/resource/SCTEstd.html
+++ b/www/templates/resource/SCTEstd.html
@@ -1,18 +1,15 @@
 <ion-view view-title="{{cortexLogo}}">
+    <ion-header-bar class="bar-subheader searchinput">
+        <label class="item item-input searchbox">
+            <i class="icon ion-ios-search placeholder-icon"></i>
+            <input type="search" placeholder="Search for a keyword" ng-model="searchString" ng-change="searchTextDidChange()">
+        </label>
+    </ion-header-bar>
     <ion-content class="mylearning-wrapper">
         <div class="resource">
             <div class="scte1">
                 <h4 class="heading1">SCTE STANDARDS</h4>
-                <div id='searchbar' class="row searchinput">
-                    <div class="col col-center">
-                        <label class="item item-input searchbox">
-                            <i class="icon ion-ios-search placeholder-icon"></i>
-                            <input type="search" placeholder="Search for a keyword" ng-model="searchString" ng-change="searchTextDidChange()">
-                        </label>
-                    </div>
-                </div>
-                <ion-list>
-                    <!-- <div class="inprogress-course"> -->
+                <!-- <ion-list>
                     <div class="list">
                         <div ng-repeat="item in standards | filter:searchString track by $index" ng-click="openStdURL(item.url)">
                             <ion-item class="item-stable scte-list1">
@@ -28,11 +25,14 @@
                             </ion-item>
                         </div>
                     </div>
-                    <!--<div class="item item-icon-left" ng-repeat="item in standards | filter:searchString track by $index" ng-click="openPage(item.url)">
-                        <i class="icon ion-document"></i>
-                        <h2>{{item.identifier}}</h2>
+                </ion-list> -->
+                <ion-list class="standards-list">
+                    <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in standards | filter:searchString track by $index" ng-click="openURL(item.url)" type="item-text-wrap">
+                        <img src="img/u214.png">
+                        <h2><a>{{item.identifier}}</a></h2>
                         <p>{{item.title}}</p>
-                    </div>-->
+                        <i class="icon ion-chevron-right icon-accessory"></i>
+                    </ion-item>
                 </ion-list>
             </div>
         </div>
