--- a/www/templates/discover/discover.html
+++ b/www/templates/discover/discover.html
@@ -18,10 +18,10 @@
             </div>
         </div>
     </ion-nav-title>
-    <ion-header-bar class="bar-subheader search-wrapper" style="position: relative">
+    <ion-header-bar class="bar-subheader search-box-wrapper" style="position: relative">
         <label class="item-input-wrapper">
             <img src="img/icon_textbox-search.png" class="search-icn">
-            <input type="search" placeholder="Enter keyword here" ng-model="query" ng-init="query=''" ng-focus="showRecentSearches()" ng-blur="hideRecentSearches()" ng-change="searchChange()" ng-keyup="$event.keyCode == 13 && searchResults(query)">
+            <input type="search" placeholder="Enter keyword here" ng-model="query" ng-focus="showRecentSearches()" ng-blur="hideRecentSearches()" ng-change="searchChange()" ng-keyup="$event.keyCode == 13 && searchResults(query)">
         </label>
         <button class="button button-clear button-stable" ng-click="voiceRecog()" style="    position: absolute; top: 16px; right: 19px" ng-if="query == ''"><img src="img/icon_textbox-mic.png" class="mic-icn"></button>
         <button class="button button-clear button-stable" ng-click="clearSearchField()" style="    position: absolute; top: 16px; right: 19px" ng-if="query != ''"><i class="ion-close-circled mic-icn"></i></button>
@@ -34,7 +34,7 @@
         </ion-slide-box>
         <div class="resources-wrapper">
             <div class="header">
-                <h2>Featured Resources</h2>
+                <h4>Featured Resources</h4>
             </div>
             <div class="app-box">
                 <table>
@@ -59,7 +59,7 @@
                 <h4 class="heading">Events</h4>
                 <a class="see-all" ng-click="myEventsList()">See All &gt;</a>
                 <div class="card eventindiv" ng-repeat="event in eventType |limitTo:3">
-                    <div class="row" ng-click="eventDetail(event.eventId,eventTabName)">
+                    <div class="row" ng-click="eventDetail(event.eventId,eventTabName,event.webDescription)">
                         <div class="col-30">
                             <div class="date-box">
                                 <img src="svg/img_calendar.svg" />
