--- a/www/templates/discover/search-results.html
+++ b/www/templates/discover/search-results.html
@@ -7,15 +7,16 @@
             </tr>
         </table>
     </ion-nav-buttons>
-    <ion-header-bar class="bar-subheader search-wrapper">
+    <ion-header-bar class="bar-subheader search-box-wrapper">
         <label class="item-input-wrapper">
             <img src="img/icon_textbox-search.png" class="search-icn">
-            <input type="search" placeholder="Enter keyword here" ng-model="query" ng-init="query=''" ng-focus="showRecentSearches()" ng-blur="hideRecentSearches()" ng-change="searchChange()">
-            <img src="img/icon_textbox-mic.png" class="mic-icn">
+            <input type="search" placeholder="Enter keyword here" ng-model="query" ng-focus="showRecentSearches()" ng-blur="hideRecentSearches()" ng-change="searchChange()" ng-keyup="$event.keyCode == 13 && searchResults(query)">
         </label>
+        <button class="button button-clear button-stable" ng-click="voiceRecog()" style="    position: absolute; top: 16px; right: 19px" ng-if="query == ''"><img src="img/icon_textbox-mic.png" class="mic-icn"></button>
+        <button class="button button-clear button-stable" ng-click="clearSearchField()" style="    position: absolute; top: 16px; right: 19px" ng-if="query != ''"><i class="ion-close-circled mic-icn"></i></button>
     </ion-header-bar>
     <ion-content class="search-results-wrapper">
-        <div class="main-title">{{searchResultsText}}</div>
+        <h4 class="main-title">{{searchResultsText}}</h4>
         <div ng-repeat="item in items | limitTo: limit as results">
             <div class="search-results-box media-video" ng-if="item.topic == 'learning' && item.type == 'video'">
                 <div class="topic-box">
@@ -119,7 +120,6 @@
         <div class="view-more" ng-hide="results.length === items.length" ng-click="limit = limit +2">
             View More
         </div>
-
         <div class="brand">
             <img src="img/SCTE-ISBE_Logos_Full_Gray.png" alt="brand" />
         </div>
