--- a/www/templates/resource/resource.html
+++ b/www/templates/resource/resource.html
@@ -4,33 +4,7 @@
         <i ng-click="redirectDisover()" class="all-icon-icon_search_white header-search-icon"></i>
     </ion-nav-buttons>
     <ion-content>
-        <ui-view name="mylearning-tab"></ui-view>
-        <div class="topic">RESOURCES</div>
-        <!-- <div class="events">
-            <h4 class="heading">YOUR EVENTS</h4>
-            <a class="see-all" ng-click="myEventsList()">See All &gt;</a>
-            <div class="card eventindiv" ng-repeat="event in events">
-                <div class="row">
-                    <div class="col col-20 date-box">
-                        <img src="svg/img_calendar.svg" />
-                        <div class="date">{{event.date}}</div>
-                        <div class="month">{{event.month}}</div>
-                    </div>
-                    <div class="col col-80">
-                        <div class="row row-top"><a href="">{{event.eventDate}}</a></div>
-                        <div class="row row-bottom">{{event.eventInfo}}</div>
-                    </div>
-                </div> -->
-        <!-- <div class="event-date">
-                                <span class="circle">{{event.date}}</span>
-                                <span class="month">{{event.month}}</span>
-                                 <div><a href="">{{event.eventDate}}  </a>
-                        </div>
-                    </div> -->
-        <!-- <div class="alpha"><a href="">{{event.eventDate}}  </a>
-                    </div> -->
-        <!-- </div>
-        </div> -->
+        <h4 class="main-title">RESOURCES</h4>
         <div class="dictionary">
             <h4 class="heading">DICTIONARY</h4>
             <a class="see-all" ng-click="dictionaryview('all')">See All &gt;</a>
@@ -75,7 +49,6 @@
                 <ion-list>
                     <ion-list>
                         <div ng-repeat="index in [0,1,2]" ng-click="openURL(whitePapers[index].fileName)">
-                        
                             <ion-item class="item-stable scte-list">
                                 <div class="row">
                                     <div class="col col-20">
@@ -89,7 +62,6 @@
                                     <div class="col col-90 arrow"><img src="svg/icon_arrow.svg" /></div>
                                 </div>
                             </ion-item>
-                        
                         </div>
                     </ion-list>
                 </ion-list>
