--- a/www/templates/techtips/techtips.html
+++ b/www/templates/techtips/techtips.html
@@ -3,16 +3,16 @@
         <label class="submit-btn" ng-click="showPopup()">Submit</label>
     </ion-nav-buttons>
     <ion-content class="padding">
-        
+        <h4 class="main-title">Tech Tips</h4>
         <div ng-repeat="techTipsContent in techTipsContents" class="techtips-video-pdf-types">
             <div ng-if="techTipsContent.template == 'video'">
-                <h4><b>{{techTipsContent.title}}</b></h4>
-               <div class="video-containerYoutube" id="popupVid">
-                <iframe ng-src="{{techTipsContent.videourl}}" frameborder="0" width="350" height="200" ng-show="flag[$index]=='true'" autoplay></iframe> 
-                <img ng-src="{{techTipsContent.coverimageurl}}" class="img-responsive" ng-hide="flag[$index]=='true'" ng-click="toggleImageAndVideo($index)"/>
-                 <a href="#" ng-hide="flag[$index]=='true'" ng-click="toggleImageAndVideo($index)">
-                 <img src="img/playoverlay.png"/>       
-                 </a>
+                <h4>{{techTipsContent.title}}</h4>
+                <div class="video-containerYoutube" id="popupVid">
+                    <iframe ng-src="{{techTipsContent.videourl}}" frameborder="0" width="350" height="200" ng-show="flag[$index]=='true' || globalFlag=='true'" autoplay></iframe>
+                    <img ng-src="{{techTipsContent.coverimageurl}}" class="img-responsive" ng-hide="flag[$index]=='true' || globalFlag=='true'" ng-click="toggleImageAndVideo($index)" />
+                    <a href="#" ng-hide="flag[$index]=='true' || globalFlag=='true'" ng-click="toggleImageAndVideo($index)">
+                        <!-- <img src="img/play.png" />
+                    </a> -->
                 </div>
             </div>
             <div ng-if="techTipsContent.template == 'html'" ng-click="techtipRouter(techTipsContent.title,techTipsContent.htmlbody)">
@@ -21,23 +21,22 @@
                         <img ng-src="{{techTipsContent.coverimageurl}}" class="img-responsive" />
                     </div>
                     <div class="col-75">
-                        <h4><b>{{techTipsContent.title}}</b></h4>
+                        <h4>{{techTipsContent.title}}</h4>
                     </div>
                 </div>
-                <p><b>{{techTipsContent.subtitle  | limitTo: 200}}{{techTipsContent.subtitle > 200 ? '...' : ''}}</b></p>
+                <p>{{techTipsContent.subtitle | limitTo: 200}}{{techTipsContent.subtitle > 200 ? '...' : ''}}</p>
                 <div class="techtips-digital">
                     <a ng-click="techtipRouter(techTipsContent.title,techTipsContent.htmlbody)">Read more</a>
-                    <div class="techtips-ratings"> 
+                    <div class="techtips-ratings">
                         <ionic-ratings ratingsobj='techTipsContent.ratingsObject' ng-click="stopPropagation($event)"></ionic-ratings>
                     </div>
                 </div>
             </div>
-            
         </div>
         <script id="templates/modal.html" type="text/ng-template">
             <ion-modal-view class="video-modal-maincontainer">
                 <ion-header-bar class="bar bar-header bar-positive">
-                    <h1 class="title">Submit Your Tech Tip</h1>
+                    <h3 class="title">Submit Your Tech Tip</h3>
                     <img class="video-modal-close" src="img/u56.png" ng-click="modal.hide()"></img>
                 </ion-header-bar>
                 <ion-content class="padding">
